##   Makefile.am - Main Automake script for NutShell
##
##   Copyright (c) 2016, Emanuel Valente  <emanuelvalente@gmail.com>
##
##   This file is part of NutShell
##
##   POSIXeg is free software: you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation, either version 3 of the License, or
##   (at your option) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program.  If not, see <http://www.gnu.org/licenses/>.

AM_CPPFLAGS = -I.

bin_PROGRAMS = nutshell

nutshell_SOURCES = main.c runcmd.c parser.c user_level.c runcmd.h parser.h \
tparse.h user_level.h debug.h native_commands.c native_commands.h exec_pipeline.c exec_pipeline.h



